<resources>
        <string name="helpone">1-Help each other to be able to do their
    homework or distance learning projects</string>
    <string name="helptwo">2-Develop their knowledge
    and skills by exchanging
    with other students</string>
    <string name="helpthree">3-Earn money from their
    homes simply by helping
    other students</string>
    <string name="heelp_permet_aux_tudiants_de">Heelp allows students to:</string>
    <string name="helpcenter">Heelp is an application which has been
designed in collaboration with
students in order to respond to
three main needs of the student.</string>
    <string name="app_name">Freelance App</string>
    <string name="sweep_to_next_page">Sweep to next page</string>
    <string name="go">Go</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot password</string>
    <string name="remember_me">Remember me</string>
    <string name="connect">Connect</string>
    <string name="i_accept_terms">I accept terms</string>
    <string name="see_more">See more</string>
    <string name="you_d_ont_have_an_account">You don\'t have an account ?</string>
    <string name="you_already_have_an_account">You already have an account ?</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="comfirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="more">More</string>
    <string name="inbox">Inbox</string>
    <string name="my_demands">My demands</string>
    <string name="my_missions">My missions</string>
    <string name="home">Home</string>
    <string name="find_a_mission">Find a mission</string>
    <string name="all_categories">All categories</string>
    <string name="ok_j_accepte">OK I\'ll accept</string>
    <string name="payments">Payments</string>
    <string name="missions_amp_demands_status"><![CDATA[Missions & demands Status]]></string>
    <string name="reviews">Reviews</string>
    <string name="messages">Messages</string>
    <string name="offers">Offers</string>
    <string name="amount_to_pay">Amount to pay</string>
    <string name="choose_a_payment_method">Choose a payment method</string>
    <string name="credit_card">Credit card</string>
    <string name="next">Next</string>
    <string name="amount">Amount :</string>
    <string name="service_fees">Service fees</string>
    <string name="bank_fees">Bank fees</string>
    <string name="wallet">Wallet</string>
    <string name="title">Title:</string>
    <string name="description">Description:</string>
    <string name="budget">Budget:</string>
    <string name="language">Language</string>
    <string name="country">Country</string>
    <string name="save">Save</string>
    <string name="details">Details</string>
    <string name="papular_searches">Popular Searches</string>
    <string name="discuss">Discuss</string>
    <string name="make_an_offer">Make an offer</string>
    <string name="accept_budget">Accept budget</string>
    <string name="write_your_message">Write your message :</string>
    <string name="ex_je_peux_le_faire_pour_vous">ex: I can do it for you</string>
    <string name="send_offer">Send offer</string>
    <string name="comfirmation">Confirmation</string>
    <string name="offer_sent_succefully">Offer sent succefully</string>
    <string name="back">Back</string>
    <string name="looking_for_a_person_or_message">Looking for a person or message</string>
    <string name="demand_posted_succefully">Demand posted succefully</string>
    <string name="payment_confirmation">Payment confirmation</string>
    <string name="back_to_home">Back to Home</string>
    <string name="support_and_contact">Support and contact</string>
    <string name="contact_form">Contact form :</string>
    <string name="please_precise_the_subject_of_your_contact_in_the_title">Please precise the subject of your contact in the title :</string>
    <string name="send">Send</string>
    <string name="contact_the_heelp_team_by_e_mail">Contact the heelp team by e-mail:</string>
    <string name="add_a_new_card">+ add a new card</string>
    <string name="my_credit">My credit</string>
    <string name="withdraw_money">Withdraw money</string>
    <string name="conditions_and_terms">Conditions and terms</string>
    <string name="log_out">Log out</string>
    <string name="promotion_offer">Promotion offer</string>
    <string name="keep_a_review_share_the_app_with_your_friends_and_earn_money_for_each_new_registration">Keep a review Share the app with your friends and earn money for each new registration !</string>
    <string name="share_the_app_and_earn_money">Share the app and earn money</string>
    <string name="already_done_ask_for_your_cash_here">Already done ? ask for your cash here</string>
    <string name="about_heelp">About Heelp</string>
    <string name="about">About</string>
    <string name="contact_heelp_com">contact@heelp.com</string>
    <string name="registered_card">Registered card</string>
    <string name="open_a_dispute">Open a dispute</string>
    <string name="open">Open</string>
    <string name="parametres">Parameters</string>
    <string name="contact_heelp_team">Contact Heelp team :</string>
    <string name="do_you_want_to_open_a_dispute">Do you want to open a dispute?</string>
    <string name="contact_here">Contact here</string>
    <string name="file_name">File Name</string>
    <string name="editer">Edit</string>
    <string name="terminologie">Terminologies :</string>
    <string name="today_4_12pm">Today 4.12pm</string>
    <string name="hey_there_nplease_provide_the_necessary_data_so_that_i_will_start_designing_i_would_hardly_take_1_2_weeks_to_complete">Hey there, Please provide the necessary data so that I will start designing. I would hardly take 1-2 weeks to complete.</string>
    <string name="les_conditions_g_n_rales_d_utilisation_sont_susceptibles_de_changer_en_permanence_sans_pr_avis_en_utilisant_heelp_vous_vous_engagez_les_lire_et_en_prendre_connaissance_autant_que_n_cessaire_l_acceptation_des_conditions_d_utilisation_est_une_tape_indispensable_pour_l_utilisation_de_heelp_et_de_ses_services_l_utilisation_de_heelp_implique_automatiquement_votre_acceptation_des_conditions_d_utilisation">Les conditions générales d’utilisation sont susceptibles de changer en permanence sans préavis. En utilisant Heelp vous vous engagez à les lire et en prendre connaissance autant que nécessaire. L’acceptation des conditions d’utilisation est une étape indispensable pour l’utilisation de Heelp et de ses services. L’utilisation de Heelp implique automatiquement votre acceptation des conditions d’utilisation.</string>
    <string name="un_heelper_est_toute_personne_utilisant_l_application_heelp_web_et_mobile_que_ce_soit_dans_le_but_d_apporter_de_l_aide_ou_pour_demander_de_l_aide_un_livrable_est_le_r_sultat_attendu_d_une_t_che_donn_e_le_livrable_peut_tre_sous_diff_rentes_formes_une_image_un_document_un_programme_un_cv_etc_une_demande_est_la_demande_d_aide_que_publie_un_heelper_une_mission_est_la_demande_pour_laquelle_un_heelper_doit_effectuer_une_action_faire_une_offre_r_aliser_une_t_che_transmettre_un_livrable">-Un heelper : est toute personne utilisant l’application Heelp (web et mobile) que ce soit dans le but d’apporter de l’aide ou pour demander de l’aide. -Un livrable : est le résultat attendu d’une tâche donnée. Le livrable peut être sous différentes formes : une image, un document, un programme, un CV, etc... -Une demande : est la demande d’aide que publie un heelper -Une mission : est la demande pour laquelle un heelper doit effectuer une action : faire une offre, réaliser une tâche, transmettre un livrable…</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book_it_has_survived_not_only_five_centuries">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,</string>
    <string name="let_me_know_when_you_complete">Let me know when you complete.</string>
    <string name="transactions">Transactions</string>
    <string name="_610_5">610,5 €</string>
    <string name="ici">ici</string>
    <string name="_2_sept_2019">2 Sept 2019</string>
    <string name="project_title">Project title</string>
    <string name="project_of_user_name_of_byer_seller">Project of : user name of byer/seller</string>
    <string name="_100">100$</string>
    <string name="messenger">Messenger</string>
    <string name="zeeshan">Name</string>
    <string name="type_a_message">Type a Message..</string>
    <string name="freelance_designer">Freelance Designer</string>
    <string name="donn_es_personnelles">Personal data :</string>
    <string name="heelp_utilise_des_technologies_de_traitement_des_donn_es_s_curis_es_afin_de_prot_ger_au_maximum_vos_donn_es_personnelles_vos_donn_es_personnelles_ne_seront_jamais_utilis_es_ou_transmises_des_tiers_sans_votre_autorisation_heelp_s_engage_vous_permettre_d_acc_der_vos_informations_personnelles_et_de_les_modifier_conform_ment_la_loi_informatique_et_libert_s_et_au_rgpd">Heelp utilise des technologies de traitement des données sécurisées afin de protéger au maximum vos données personnelles. Vos données personnelles ne seront jamais utilisées ou transmises à des tiers sans votre autorisation. Heelp s’engage à vous permettre d’accéder à vos informations personnelles et de les modifier conformément à la loi informatique et libertés et au RGPD.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delivered">Delivered</string>
    <string name="mon_01_nov_2019">Mon,01 Nov 2019</string>
    <string name="by_zeeshan_akhter"></string>
    <string name="chemistry">Chemistry</string>
    <string name="do_you_want_to_release_payment">Do you want to release payment?</string>
</resources>