<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">



            <RelativeLayout
                android:id="@+id/rlHomeToolbarhelpId"
                android:layout_width="match_parent"
                android:layout_height="160sp"
                android:background="@drawable/relativeredius">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivdashboardbackhelpId"
                    android:layout_width="35dp"
                    android:layout_height="38dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="10sp"
                    android:padding="5sp"
                    android:src="@drawable/back" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivnotificationId"
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="15sp"
                    android:src="@drawable/ring" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ivnotificationId"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp">


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvhelpid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about"
                        android:textColor="@color/Black"
                        android:textSize="28dp"
                        android:textStyle="normal" />


                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="100sp"
                        android:layout_height="50sp"
                        android:layout_toEndOf="@+id/tvhelpid"
                        android:src="@drawable/logo" />

                </RelativeLayout>

            </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_below="@+id/rlHomeToolbarhelpId"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout
                android:id="@+id/rlhelpcenterid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="20sp"
                android:background="@color/white">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvhelpcentertextoneid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="0.3dp"
                    android:text="@string/helpcenter"
                    android:textAlignment="center"
                    android:textColor="@color/Black"
                    android:textSize="17dp"
                    android:textStyle="normal" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvhelpcentertexttwoid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvhelpcentertextoneid"
                    android:layout_marginTop="20sp"
                    android:lineSpacingExtra="0.3dp"
                    android:text="@string/heelp_permet_aux_tudiants_de"
                    android:textAlignment="center"
                    android:textColor="@color/Black"
                    android:textSize="17dp"
                    android:textStyle="normal" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvhelpcentertextthreeid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvhelpcentertexttwoid"
                    android:layout_marginTop="20sp"
                    android:lineSpacingExtra="0.3dp"
                    android:text="@string/helpone"
                    android:textAlignment="center"
                    android:textColor="@color/Black"
                    android:textSize="17dp"
                    android:textStyle="normal" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvhelpcentertextfourid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvhelpcentertextthreeid"
                    android:layout_marginTop="20sp"
                    android:lineSpacingExtra="0.3dp"
                    android:text="@string/helptwo"
                    android:textAlignment="center"
                    android:textColor="@color/Black"
                    android:textSize="17dp"
                    android:textStyle="normal" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvhelpcentertextfiveid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvhelpcentertextfourid"
                    android:layout_marginTop="20sp"
                    android:lineSpacingExtra="0.3dp"
                    android:text="@string/helpthree"
                    android:textAlignment="center"
                    android:textColor="@color/Black"
                    android:textSize="17dp"
                    android:textStyle="normal" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlhelpcenterid"
                android:layout_centerHorizontal="true"
                android:layout_margin="20sp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvheelpid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_the_heelp_team_by_e_mail"
                    android:textColor="@color/Black"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvmailidid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvheelpid"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5sp"
                    android:text="@string/contact_heelp_com"
                    android:textColor="@color/Black"
                    android:textSize="14sp"
                    android:textStyle="normal" />


            </RelativeLayout>


        </RelativeLayout>

    </ScrollView>


</RelativeLayout>
