<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlcredittabid"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:cardBackgroundColor="@color/lessgray"
            app:cardCornerRadius="@dimen/_17sdp"
            app:cardElevation="@dimen/_8sdp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvdatetimeid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/_2_sept_2019"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="normal" />




                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvprojecttitleid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvdatetimeid"
                    android:layout_centerHorizontal="true"
                    android:text="@string/project_title"
                    android:textColor="@color/tabselected"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="normal" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvprojetcostid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvprojecttitleid"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15sp"
                    android:text="@string/_100"
                    android:textColor="#99E47A"
                    android:textSize="@dimen/_19sdp"
                    android:textStyle="bold" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvprojectdescriptionid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvprojetcostid"
                    android:layout_centerHorizontal="true"
                    android:text="@string/project_of_user_name_of_byer_seller"
                    android:textColor="@color/tabselected"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="normal" />



            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</layout>