<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="12sp"
    app:cardElevation="2sp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUserNameReviewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_2sdp"
            android:text="@string/do_you_want_to_release_payment"
            android:textColor="@color/Black"
            android:textSize="@dimen/_14sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvUserNameReviewId"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <RelativeLayout
                android:id="@+id/rlNoId"
                android:layout_width="0sp"
                android:layout_height="40dp"
                android:layout_marginTop="15sp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/selected_box">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCancelId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/no"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="normal" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rlYESId"
                android:layout_width="0sp"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="15sp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/selected_box">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvYesId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/yes"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="normal" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>